# myUiForQQ

./: .gitignore  CMakeLists.txt  Logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h
src/: friendConversationWidget.cpp  loginDialog.cpp  mainWindow.cpp  userChangeDialog.cpp
src/include/: friendConversationWidget.h  loginDialog.h  mainWindow.h  userChangeDialog.h
ui/: friendConversationWidget.ui  loginDialog.ui  mainWindow.ui  userChangeDialog.ui
